--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@softroles/authorize-bearer-token",
   "version": "1.0.0",
-  "description": "Authorize bearer token",
+  "description": "Authorize bearer token middleware",
   "keywords": [
     "express",
     "auth",
